--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
@@ -64,6 +64,10 @@
     </section>
 
     <section class="walk">
+
+
+
+
       <div class="walk-text">
         <h3>Let's Go For A Walk</h3>
 
